# finyl

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  install.sh  mypy.ini  pyproject.toml
.github/: dependabot.yml
finyl/: __init__.py  actions.py  audio_player.py  finyl_events.txt  main.py  nfc.py  play.py  settings.py  spotify_client.py  starter.py  utils.py  yt_album.py
finyl/settings/: __init__.py  dev.py  pi.py  settings.py
finyl/sounds/: __init__.py
finyl/voice/: README.md
infra/: finyl.service  install_finyl.sh  start_finyl.sh
tests/: test_yt_album.py
