[tool.poetry]
name = "finyl"
version = "0.2.1"
description = "Software that runs a virtual vinyl player."
authors = ["dakaugu <dakaugu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
pytube = "^15.0.0"
piicodev = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ipython = "^8.18.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
finyl = "finyl.main:start"
