[tool.poetry]
name = "finyl"
version = "0.2.2"
description = "Software that runs a virtual vinyl player."
authors = ["dakaugu <dakaugu@gmail.com>"]
readme = "README.md"
exclude = ["finyl/voice/*"]

[tool.poetry.dependencies]
python = "3.11.1"
requests = "^2.31.0"
pydub = "^0.25.1"
pytube = "^15.0.0"
piicodev = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipython = "^8.19.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pre-commit = "^3.5.0"
tts = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
finyl = "finyl.main:start"
